--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,28 @@
     ],
     "react",
     "stage-0"
-  ]
+  ],
+  "env": {
+    "development": {
+      "plugins": [
+        [
+          "babel-plugin-webpack-alias",
+          {
+            "config": "./webpack.config.js"
+          }
+        ]
+      ]
+    },
+    "production": {
+      "plugins": [
+        [
+          "babel-plugin-webpack-alias",
+          {
+            "config": "./webpack.config.js",
+            "findConfig": true
+          }
+        ]
+      ]
+    }
+  }
 }
