--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "flow-bin": "^0.46.0",
     "flow-coverage-report": "^0.3.0",
     "flow-remove-types": "^1.2.1",
+    "nock": "^9.0.13",
     "ramda": "^0.23.0",
     "react-hot-loader": "^1.3.1",
+    "redux-mock-store": "^1.2.3",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
